--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content-script.js"],
+      "js": ["node_modules/jquery/dist/jquery.min.js", "content-script.js"],
       "run_at": "document_start"
     }
   ],
