--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bootstrap": "^5.3.0-alpha3",
     "jquery": "^3.6.4",
     "tldts": "^6.0.4"
   }
