--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,8 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["node_modules/jquery/dist/jquery.min.js", "content-script.js"],
+      "js": ["node_modules/jquery/dist/jquery.min.js", "node_modules/bootstrap/dist/js/bootstrap.min.js", "content-script.js"],
+      "css": ["node_modules/bootstrap/dist/css/bootstrap.min.css"],
       "run_at": "document_start"
     }
   ],
