--- a/manifest.json
+++ b/manifest.json
@@ -20,5 +20,10 @@
     "page": "options/options.html",
     "open_in_tab": false
   },
-  "host_permissions": ["<all_urls>"]
+  "host_permissions": ["<all_urls>"],
+  "web_accessible_resources": [
+    {
+      "resources": ["node_modules/bootstrap/dist/css/bootstrap.min.css", "node_modules/bootstrap/dist/js/bootstrap.min.js"],
+      "matches": ["http://*/*", "https://*/*"]
+    }]
 }
