--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "time_management",
-  "version": "2.1",
+  "version": "1.0",
   "description": "Pause a few seconds before visiting a distracting website",
   "permissions": ["tabs", "scripting", "activeTab", "storage"],
   "background": {
@@ -16,6 +16,11 @@
       "run_at": "document_start"
     }
   ],
+  "icons": {
+    "16": "icons/mindful-browsing-16.png",
+    "48": "icons/mindful-browsing-48.png",
+    "128": "icons/mindful-browsing-128.png"
+  },
   "options_ui": {
     "page": "options/options.html",
     "open_in_tab": false
