--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "mindful_browsing",
   "version": "1.0",
   "description": "Pause a few seconds before visiting a distracting website",
-  "permissions": ["tabs", "scripting", "activeTab", "storage"],
+  "permissions": ["tabs", "activeTab", "storage"],
   "background": {
     "service_worker": "background.js",
     "type": "module"
